syntax = "proto3";
package load.v1;

// PatchOp allows specifying a subset ofcan perform a subset of JSON-Patch operations, namely
// "add", "remove", and "replace".
enum PatchOp {
  PATCH_OP_UNSPECIFIED = 0;
  PATCH_OP_ADD = 1;
  PATCH_OP_REMOVE = 2;
  PATCH_OP_REPLACE = 3;
}

// CreateDataRequest looks up the document by path, and inserts a new JSON
// value there.
//
// This is equivalent in functionality to OPA's
// [Data REST API Create/Overwrite method](https://www.openpolicyagent.org/docs/latest/rest-api/#create-or-overwrite-a-document).
message CreateDataRequest {
  string path = 1;
  string data = 2; // json string, like "{\"foo\":true}"
}

message CreateDataResponse {
}

// GetDataRequest looks up the document by path. This can be either a plain
// JSON value (a "Base" document in OPA parlance), or a rule head (a
// "Virtual"/computed document).
//
// This is equivalent in functionality to OPA's
// [Data REST API Get with Input method](https://www.openpolicyagent.org/docs/latest/rest-api/#get-a-document-with-input).
//
// Note that the input field should not be wrapped with
// `{ "input": <value> }`, you can simply put the JSON serialized `<value>`
// in the input field directly.
message GetDataRequest {
  string path = 1;
  string input = 2; // JSON string, like "{\"foo\":true}"
}

message GetDataResponse {
  string path = 1;
  string result = 2; // JSON string, like "{\"foo\":true}"
}

// UpdateDataRequest looks up the document by path, and then attempts to
// perform one of three patching operations at that location: add, remove,
// or replace.
//
// This is roughly equivalent in functionality to OPA's
// [Data REST API Patch method](https://www.openpolicyagent.org/docs/latest/rest-api/#patch-a-document)
//
message UpdateDataRequest {
  string path = 1;
  PatchOp op = 2; // If unspecified, defaults to "overwrite/replace".
  string data = 3; // JSON value to be patched in, like "{\"foo\":true}"
}

message UpdateDataResponse {
}

// DeleteDataRequest looks up the document by path, and then attempts to
// remove it from the store.
//
// This is equivalent in functionality to OPA's
// [Data REST API Delete method](https://www.openpolicyagent.org/docs/latest/rest-api/#delete-a-document).
message DeleteDataRequest {
  string path = 1;
}

message DeleteDataResponse {
}

service DataService {
  rpc GetData(GetDataRequest) returns (GetDataResponse);
  rpc CreateData(CreateDataRequest) returns (CreateDataResponse);
  rpc UpdateData(UpdateDataRequest) returns (UpdateDataResponse);
  rpc DeleteData(DeleteDataRequest) returns (DeleteDataResponse);
}
